chrome/skin/feedview.css
body {
  background: #fafcfc;
  font-family: Verdana, sans-serif;
  font-size: 62.5%;
  margin: 0;
  padding: 0;
  }

/* ----------------  Header ----------------- */

#header {
  background: #1d272d;
  border-bottom: 7px solid #646664;
  color: #eaeaea;
  display: block;
  font-family: Arial, sans-serif;
  padding: 5px 5% 3px;
  text-decoration: none;
  }

#feed-image {
  border: none;
  float: right;
  margin: 0 10px 10px;
  }

#feed-title {
  color: #eaeaea;
  font-size: 2.2em;
  font-weight: bold;
  }

#feed-subtitle {
  font-size: 1.4em;
  font-weight: normal;
  margin-top: 3px;
  text-align: left;
  }

#clear {
  clear: both;
  }

#feed-content {
  margin: 2em auto 0 auto;
  max-width: 80em;
  }


/* ----------------  Article ----------------- */

.article-container {
  background-color: #fdfdfd;
  border: 1px #bcc8cb solid;
  -moz-border-radius: 2px;
  margin: 0 1em 1em 40px;
  overflow: visible;
  }


/*               Article header               */
.article-header {
  background: url('chrome://brief/skin/unreadEntryBackground.png') repeat-x;
  margin-bottom: 5px;
  min-height: 3em;
  padding: 5px 5px 0;
  }

.article-container[read] .article-header {
  background: #fdfdfd url('chrome://brief/skin/readEntryBackground.png') repeat-x;
  }

.article-title-link {
  color: #0f0f0f;
  font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
  font-size: 1.3em;
  font-weight: bold;
  text-decoration: none;
  }

.article-container[read] .article-title-link {
  font-weight: normal;
  }


/*          Article controls             */

.article-controls {
  display: table-cell;
  float: right;
  font-family: Arial, sans-serif;
  font-size: 1.2em;
  margin-top: -0.2em;
  }

.article-controls button {
  margin-bottom: 0;
  min-width: 0;
  opacity: 0.8;
  vertical-align: middle;
  }

.article-controls button:hover {
  opacity: 1.0 !important;
}

.delete-entry {
  list-style-image: url('chrome://brief/skin/icons/entry-delete.png');
  -moz-image-region: rect(0px, 15px, 15px, 0px);
  }

.delete-entry:hover {
  -moz-image-region: rect(15px, 15px, 30px, 0px);
  }

.restore-entry {
  list-style-image: url('chrome://brief/skin/icons/restore-entry.png');
  }


.article-container[starred] .star-entry {
  list-style-image: url('chrome://brief/skin/icons/unstar.png');
  }

.star-container {
  float: left;
  margin: -5px 2px 0 -5px;
  padding: 5px 3px 0 5px;
}

.star-image {
  list-style-image: url('chrome://brief/skin/icons/entry-star.png');
  -moz-image-region: rect(0px, 16px, 16px, 0px);
  }

.article-container:not([starred]) .star-container:hover .star-image {
  -moz-image-region: rect(16px, 16px, 32px, 0px);
  opacity: 0.7;
  }

.article-container[starred] .star-image {
  -moz-image-region: rect(32px, 16px, 48px, 0px);
}



/*           Article subheader             */
.article-subheader {
  color: #4f4f4f;
  font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
  font-size: 1.3em;
  min-height: 1.4em;
  padding: 0 2em 0 40px;
}

.article-authors, .article-date {
  float: right;
  margin-bottom: 1em;
}

.article-authors {
  padding-right: 0.3em;
}


/*        Article main area              */

.article-content {
  color: #101d27;
  clear: both;
  font-size: 1.2em;
  margin: 0 1em 1.5em;
  overflow: auto;
  padding: 0 1.5em 0;
  }

.article-content a {
  border-bottom: 1px solid #0c2845;
  color: #0c2845;
  text-decoration: none;
  }

.article-content a:visited	{
  border-color: #3f5476;
  color: #3f5476;
  }

.article-content > *:first-child {
  margin-top: 0;
}

.article-content pre, .article-content code {
  font-family: "Courier New", Courier, monospace;
  font-size: 1em;
  }


/*       Modifications for the headlines mode         */

.article-container[collapsed] {
  background: #fafcfc;
  border-bottom: none;
  border-right: none;
  border-left: none;
  clear: both;
  margin-bottom: 0;
  padding: 0 1px 1em 1px; /* Compensate the lack of border */
}

.article-container[collapsed] .article-controls,
.article-container[collapsed] .article-content {
  display: none;
}

.article-container[collapsed]:hover .article-controls {
  display: table-cell;
}

.expand-button {
  display: none;
  float: left;
  height: 6em;
  margin: -5px 0 0 -48px;
  width: 42px;
}

#feed-content[showHeadlinesOnly] .expand-button {
  display: block;
}

#feed-content[showHeadlinesOnly] .article-container:hover .expand-button {
  background: url(chrome://brief/skin/icons/expand-button.png) 15px 5px no-repeat;
}

